<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.budget.CreateBudgetFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textColorHint="@color/gray_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_budget_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="26" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:hint="@string/amount"
                android:textColorHint="@color/gray_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_amount_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="@dimen/dim_8dp"
                    android:text="@string/recurrence" />

                <Spinner
                    android:id="@+id/id_spinner_reccurence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@color/gray_text" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:hint="@string/starting_date_str"
                android:orientation="vertical"
                android:textColorHint="@color/gray_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_starting_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:hint="@string/ending_date_str"
                android:orientation="vertical"
                android:textColorHint="@color/gray_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_ending_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:textColor="@color/gray_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notifications"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/dimen_16sp" />

                <Switch
                    android:id="@+id/id_switch_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/id_btn_edit_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:backgroundTint="@color/button_color_states"
        android:elevation="0dp"
        android:enabled="false"
        android:src="@drawable/ic_check_black_24dp"
        app:borderWidth="0dp" />

    <Button
        android:id="@+id/id_budget_hide_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/gray_text"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:visibility="invisible"
        app:layout_anchorGravity="left|bottom" />

    <ImageView
        android:id="@+id/id_budget_hide_keyboard_image"
        android:layout_width="@dimen/dimen_32dp"
        android:layout_height="@dimen/dimen_32dp"
        android:layout_gravity="left|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_expense_beauty"
        android:backgroundTint="@color/gray_text"
        android:padding="4dp"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:visibility="gone" />

</FrameLayout>